--- a/package.json
+++ b/package.json
@@ -20,36 +20,35 @@
   },
   "homepage": "https://github.com/electron/electron-quick-start#readme",
   "dependencies": {
-    "electron-prebuilt": "^1.2.0",
     "babel": "^5.6.4",
     "babel-core": "^5.5.8",
-    "node-sass": "^3.2.0",
-    "browser-sync": "^2.9.12",
-    "webpack": "^1.12.14",
     "babel-loader": "~6.0.1",
-    "url-loader": "^0.5.6",
-    "css-loader": "^0.15.6",
-    "sass-loader": "^2.0.0",
-    "file-loader": "^0.8.4",
-    "extract-text-webpack-plugin": "^0.8.2",
-    "browser-sync-webpack-plugin": "^1.0.0",
-    "webpack-error-notification": "^0.1.6",
-    "jquery": "^2.1.4",
-    "bootstrap-sass": "^3.0.0",
     "babel-preset-es2015": "~6.0.15",
     "babel-preset-react": "~6.0.15",
+    "bootstrap-sass": "^3.0.0",
+    "browser-sync": "^2.9.12",
+    "browser-sync-webpack-plugin": "^1.0.0",
     "bundle-loader": "^0.5.4",
+    "css-loader": "^0.15.6",
+    "electron-packager": "^7.0.3",
+    "electron-prebuilt": "^1.2.0",
+    "extract-text-webpack-plugin": "^0.8.2",
+    "file-loader": "^0.8.4",
     "history": "^1.17.0",
     "html-webpack-plugin": "~1.6.2",
+    "jquery": "^2.1.4",
     "jsx-loader": "~0.13.2",
+    "node-notifier": "^4.6.0",
+    "node-sass": "^3.2.0",
     "open-browser-webpack-plugin": "0.0.1",
     "react": "~0.14.2",
     "react-dom": "~0.14.2",
     "react-router": "^2.0.0",
+    "sass-loader": "^2.0.0",
     "uglify-loader": "^1.3.0",
-    "webpack-dev-server": "^1.10.1"
-  },
-  "devDependencies": {
-    "electron-packager": "^7.0.3"
+    "url-loader": "^0.5.6",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.10.1",
+    "webpack-error-notification": "^0.1.6"
   }
 }
